<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">iFun</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connected</string>
    <string name="menu_disconnect">Unconnected</string>
    <string name="menu_pair">Connecting</string>
    <string name="menu_scan">scan</string>
    <string name="menu_stop">stop</string>
    <string name="data_send_ok">Send successful</string>
    <string name="data_send_error">Send failed</string>
    <string name="connect_device_confirm_connect_title">Connect device</string>
    <string name="connect_device_confirm_connect_info">Confirm connect device?</string>
    <string name="connect_device_confirm_disconnect_title">Disconnect device</string>
    <string name="connect_device_confirm_disconnect_info">Confirm disconnect device?</string>
    <string name="confirm_disconnect">Disconnect</string>
    <string name="confirm_connect">Connect</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="connect_device_confirm_pair_title">Initiate pairing</string>
    <string name="connect_device_confirm_pair_info">Confirm initiate pairing?</string>
    <string name="connect_device_confirm_pair_ok">Confirm</string>
    <string name="connect_device_confirm_pair_cancel">Cancel</string>
    <string name="connect_device_cancel_pair_title">Stop pairing</string>
    <string name="connect_device_cancel_pair_info">Confirm stop pairing?</string>
    <string name="connect_device_cancel_pair_ok">Confirm</string>
    <string name="connect_device_cancel_pair_cancel">Cancel</string>
    <string name="app_name_actDiscovery">Search for Bluetooth devices</string>
    <string name="app_name_actAbout">About us</string>
    <string name="app_name_actKeyBoard">The keyboard controller</string>
    <string name="btn_main_Send">Send out</string>
    <string name="btn_yes">Confirm</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_reSearch">Search again</string>
    <string name="btn_click_me">Keyboard</string>
    <string name="btn_Keyboard_mode">Keyboard mode</string>
    <string name="btn_Normal_mode">Normal mode</string>
    <string name="menu_main_Connection">Connect device</string>
    <string name="menu_Clear">Clear screen</string>
    <string name="menu_main_About">About</string>
    <string name="menu_main_IO_Mode">Input output model</string>
    <string name="menu_keyboard_set">Set keyboard</string>
    <string name="menu_keyboard_set_over">End keyboard settings</string>
    <string name="et_actDiscovery_SendText_Hint">Enter the string you want to send</string>
    <string name="rb_IO_Mode_Set_Char">String</string>
    <string name="rb_IO_Mode_Set_Hex">Hex(00-FF)</string>
    <string name="tv_IO_Mode_Set_Input">Input display type</string>
    <string name="tv_IO_Mode_Set_Output">Output type</string>
    <string name="tv_keyboard_set_BtnName">Button Name:</string>
    <string name="tv_keyboard_set_SendValue">Send content:</string>
    <string name="tv_actDiscovery_Receive_Show_Init">Create a Bluetooth connection. Note:please establish pairing between the mobile phone and the Bluetooth device before the first connection.</string>
    <string name="tv_actKeyBoard_Init">By [MENU] button, you can set each key function of the keyboard.</string>
    <string name="dialog_title_IO_Mode_Set">Input and output type setting</string>
    <string name="dialog_title_keyboard_Set">Button Function Set</string>
    <string name="dialog_title_Err">Error</string>
    <string name="dialog_title_Operat_Mode">Select the operating mode</string>
    <string name="msg_actDiscovery_Connevction_Access">Bluetooth serial port connection is successful</string>
    <string name="msg_actDiscovery_SendBytesErr">Serial port to send data failed</string>
    <string name="msg_actDiscovery_select_device">Select the Bluetooth device you want to connect</string>
    <string name="msg_actDiscovery_Bluetooth_Open_Fail">Bluetooth is turned off,please quit and try again.</string>
    <string name="msg_actDiscovery_Bluetooth_Open_Modle">Opening Bluetooth module ....</string>
    <string name="msg_actDiscovery_Bluetooth_Open">Trying to turn on Bluetooth devices.</string>
    <string name="msg_actDiscovery_Bluetooth_SPP_Conn_Fail">Bluetooth serial communication link failure.</string>
    <string name="msg_actDiscovery_Search">Bluetooth device searching...</string>
    <string name="msg_actDiscovery_Bluetooth_Bond_msg">The currently selected device is not binding,please bind and then connect</string>
    <string name="msg_actDiscovery_Bluetooth_Bond_fail">Bluetooth devices bind failed</string>
    <string name="msg_Hex_String_Illegal">Hexadecimal values are not legitimate</string>
    <string name="msg_Bluetooth_conn_lost">Device connection is interrupted unexpectedly (can not communicate)</string>
    <string name="msg_please_connect">Please establish a Bluetooth connection</string>
    <string name="msg_please_pair">Waiting for the pairing</string>
    <string name="msg_connect_ok">The connection is successful!</string>
    <string name="msg_re_connect">Please exit the program, and connect again.</string>
    <string name="msg_connect_history">Established directly connect to the last device has been successfully connected? Please confirm that the device you want to connect has opened, and in the effective distance.</string>
    <string name="msg_connecting">Equipment Connecting ...</string>
    <string name="vdoply_mode">Video control</string>
    <string name="mp3_mode">Music control</string>
    <string name="pinlv_mode">Firmware upgrade</string>
    <string name="set_mode_air_update">Update</string>
    <string name="set_mode_version">OS Version</string>
    <string name="set_mode_help">Help</string>
    <string name="set_mode_clear_connection_history">Clear connect record</string>
    <string name="set_mode_clear_data_history">Clear use record</string>
    <string name="set_mode_clear_msg">Confirm that you want to clear all connection records?</string>
    <string name="set_mode_clear_use_msg">Confirm that you want to clear all user records?</string>
    <string name="set_mode_clear_ok">Confirm</string>
    <string name="set_mode_clear_cancel">Cancel</string>
    <string name="zhendong_strength">Adjust vibration level</string>
    <string name="zhendong_mode">Built-mode</string>
    <string name="zhendong_custom_mode">Custom vibration modes</string>
    <string name="yaoyiyao_mode">Shake to vibration</string>
    <string name="voicectrl_mode">Voice control</string>
    <string name="ai_talk_mode">Intelligent voice</string>
    <string name="custom_mode">Private custom</string>
    <string name="mp3_mode_title">Music follower</string>
    <string name="mp3_mode_button_start">Play music</string>
    <string name="mp3_mode_button_stop">Stop playing</string>
    <string name="set_mode">Settings</string>
    <string name="dance_mode">Dance Mode</string>
    <string name="custom_draw_mode">Draw the vibration by yourself</string>
    <string name="pinlv_mode_stop">Stop</string>
    <string name="dance_help">Carry your phone rocking</string>
    <string name="yaoyiyao_help">Can you shake it to give her orgasm?</string>
    <string name="mp3_select_file">Select Music</string>
    <string name="mp3_reset_default">Set as default</string>
    <string name="vdoply_select_file">Select Video</string>
    <string name="vdoply_reset_default">Set as default</string>
    <string name="back_dialog_title">Exit the application</string>
    <string name="back_dialog_mgs">Are you sure you want to end the application?</string>
    <string name="back_dialog_ok">Confirm</string>
    <string name="back_dialog_cancle">Cancel</string>
    <string name="zhendong_strength_1">Felt a strength</string>
    <string name="zhendong_strength_2">Two felt strength</string>
    <string name="zhendong_strength_3">Three felt strength</string>
    <string name="zhendong_strength_4">Four felt strength</string>
    <string name="zhendong_strength_5">Five felt strength</string>
    <string name="zhendong_strength_6">Six felt the intensity</string>
    <string name="zhendong_strength_7">Seven felt strength</string>
    <string name="zhendong_strength_stop">Stop</string>
    <string name="zhendong_strength_set">The vibration intensity is set to</string>
    <string name="cannect_status">Connection status: Not connected</string>
    <string name="click_to_start">Click to start</string>
    <string name="click_to_stop">Click Stop</string>
    <string name="voicecmdbuttonstr">Long press recognition</string>
    <string name="voice_ctr_yuancheng_help">Please choose the APP to connect</string>
    <string name="voice_ctr_yuancheng_info">Please open the corresponding procedures to control vibration</string>
    <string name="voice_ctr_yuancheng_title">Interactive remote control</string>
    <string name="voice_ctr_yuancheng_back_info">The system has been running in the background automatically</string>
    <string name="voice_ctr_yuancheng_wenxin">We chat\nVoice/Video</string>
    <string name="voice_ctr_yuancheng_qq">QQ\nVoice/Video</string>
    <string name="voice_ctr_yuancheng_call">Phone\nVoice/Video</string>
    <string name="fwupdate_oad_service_initialisationfailed">OAD service initialisation failed</string>
    <string name="fwupdate_get_target_info_failed">Failed to get target info</string>
    <string name="fwupdate_failed">Update failed</string>
    <string name="prog_ogoing">Close the application does not allow when upgrading process</string>
    <string name="download_image">Update</string>
    <string name="no_image">Not oad file</string>
    <string name="ai_talk_prev">upward</string>
    <string name="ai_talk_next">downward</string>
    <string name="ai_talk_less">weaker</string>
    <string name="ai_talk_more">stronger</string>
    <string name="ai_talk_stop">stop</string>
    <string name="zhendong_item_01">stroke</string>
    <string name="oad_file_help">1,Equipment system upgrade is the optimization. Customers in the purchase of products can conveniently use the equipment optimization and upgrading services at any time.\n2,Make sure the phone and the toy has enough power.\n3,Don\'t disconnect the device and the phone\'s Bluetooth connection in the upgrade process.\n4,If there is an interruption, the next time will be re-upgrade.\n5,Please put the update files (AppA.bin &amp; AppB.bin) into the fwupdate folder</string>
    <string name="remote_mode_send">send</string>
    <string name="remote_mode_send_title">send message</string>
    <string name="remote_mode_send_dialog_message">enter the phone number:</string>
    <string name="remote_mode_name_tips">Give it a name!</string>
    <string name="remote_mode_skip">Skip</string>
    <string name="remote_mode_ok">Yes</string>
    <string name="set_mode_app_check">Check APP version</string>
    <string name="set_mode_apk_version">version:V<xliff:g id="version">%s</xliff:g></string>
    <string name="set_mode_firmware_update">Firmware update</string>
    <string name="set_mode_firmware_version">firmware version<xliff:g id="version">%s</xliff:g></string>
    <string name="set_mode_powered_by">powered by:无锡宇宁光电科技有限公司</string>
    <string name="password_settings">Set password</string>
</resources>