<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout 
    android:orientation="vertical" 
    android:id="@+id/rl_main" 
    android:focusable="true" 
    android:focusableInTouchMode="true" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background_settings"    
        android:orientation="vertical">
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="124"
	        android:paddingLeft="@dimen/layout_margin"
	        android:paddingRight="@dimen/layout_margin"
            android:onClick="onPassword"
            android:background="@drawable/background_settings_item_selector">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/password_settings"
                android:textColor="@color/set_mode_item_text_color"
                android:textSize="@dimen/set_mode_item_text_size"/>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="124"
	        android:paddingLeft="@dimen/layout_margin"
	        android:paddingRight="@dimen/layout_margin"
            android:onClick="onAPPcheck"
            android:background="@drawable/background_settings_item_selector">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/set_mode_app_check"
                android:textColor="@color/set_mode_item_text_color"
                android:textSize="@dimen/set_mode_item_text_size"/>
            <ImageView
                android:id="@+id/settings_update_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/settings_update_tips"
                android:visibility="invisible"
                android:contentDescription="@null" />
            <TextView 
                android:id="@+id/set_mode_apk_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/settings_update_tips"
                android:layout_centerVertical="true"
                android:text="@string/set_mode_apk_version"
                android:textColor="@color/set_mode_item_text_color"
                android:textSize="@dimen/set_mode_item_text_size_small"/>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="124"
	        android:paddingLeft="@dimen/layout_margin"
	        android:paddingRight="@dimen/layout_margin"
            android:onClick="onSelectFW"
            android:background="@drawable/background_settings_item_selector">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/set_mode_firmware_update"
                android:textColor="@color/set_mode_item_text_color"
                android:textSize="@dimen/set_mode_item_text_size"/>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="124"
	        android:paddingLeft="@dimen/layout_margin"
	        android:paddingRight="@dimen/layout_margin"
            android:onClick="onDeviceClear"
            android:background="@drawable/background_settings_item_selector"
            android:visibility="gone">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/set_mode_clear_connection_history"
                android:textColor="@color/set_mode_item_text_color"
                android:textSize="@dimen/set_mode_item_text_size"/>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="124"
	        android:paddingLeft="@dimen/layout_margin"
	        android:paddingRight="@dimen/layout_margin"
            android:onClick="onHistoryClear"
            android:background="@drawable/background_settings_item_selector">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/set_mode_clear_data_history"
                android:textColor="@color/set_mode_item_text_color"
                android:textSize="@dimen/set_mode_item_text_size"/>
        </RelativeLayout>
        <View 
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="776"/>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="124">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/set_mode_powered_by"
                android:textColor="@color/set_mode_item_text_color"
                android:textSize="@dimen/set_mode_item_text_size_small"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>