<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="27dip"
    android:layout_marginRight="27dip"
    android:orientation="vertical"
    android:background="@drawable/dialog_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:background="@drawable/dialog_title_background" >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/remote_mode_send_title"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/remote_mode_send_dialog_message"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />
        
        <EditText
            android:id="@+id/remote_mode_send_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:background="@drawable/remote_mode_info_bg"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/pink_tips" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/dialog_send_btn"
            android:text="@string/remote_mode_send"
            style="@style/dialog_btn" />

    </LinearLayout>

</LinearLayout>
