<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    
    <include 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        layout="@layout/title_bar"/>
    
    <LinearLayout 
  	    android:layout_width="fill_parent"
  	    android:layout_height="fill_parent"
  	    android:orientation="vertical">
  	    <RelativeLayout 
  	        android:layout_width="fill_parent"
  	        android:layout_height="0px"
  	        android:layout_weight="5"
  	        android:background="@drawable/fw_update_top"
  	        android:gravity="center_horizontal">
  	        <Button
                android:id="@+id/btn_load_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="onLoadCustom"
                android:text="@string/download_image" 
                android:textColor="@color/fw_update_btn_color"
                android:background="@drawable/fw_update_btn_bg_selector"/>
  	        <ProgressBar
  	            android:id="@+id/pb_progress"
  	            style="@style/fw_update_progress"
  	            android:layout_width="match_parent"
  	            android:layout_height="wrap_content"
  	            android:layout_alignParentBottom="true"
  	            android:indeterminate="false"
  	            android:max="100"
  	            android:progress="0" />
  	        <TextView
  	            android:id="@+id/set_mode_firmware_version"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_above="@id/pb_progress"
  	            android:layout_centerHorizontal="true"
  	            android:text="@string/set_mode_firmware_version"
  	            android:textColor="@color/white" />
  	    </RelativeLayout>

  	    <LinearLayout 
  	        android:layout_width="fill_parent"
  	        android:layout_height="0px"
  	        android:layout_weight="4"
  	        android:background="@drawable/fw_update_bottom">
  	        <ScrollView
  	            android:layout_width="match_parent"
  	            android:layout_height="match_parent" >
  	            <TextView
  	                android:id="@+id/oad_file_help"
  	                android:layout_width="fill_parent"
  	                android:layout_height="wrap_content"
  	                android:layout_marginLeft="10dip"
  	                android:layout_marginRight="10dp"
  	                android:layout_marginTop="10dip"
  	                android:lineSpacingExtra="2dp"
  	                android:text="@string/oad_file_help"
  	                android:textColor="@color/fw_update_help_color" />

  	        </ScrollView>
  	    </LinearLayout>

    </LinearLayout>
</LinearLayout>
